--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
     <h1><i class="fa fa-podcast" aria-hidden="true"></i> Pesquisar Podcast</h1>
-    <input id="cast" type="text"><button onclick="getCast">Go!</button>
+    <input id="cast" type="text"><button onclick="getCast()">Go!</button>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
